force-app/main/default/objects/Week__c/fields/Average_Fat_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Fat_per_Day__c</fullName>
    <formula>Total_Fat__c / (Number_of_Complete_Days__c -  Number_of_Incomplete_Food_Logs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Fat per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>