force-app/main/default/objects/Week__c/fields/Average_Protein_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Protein_per_Day__c</fullName>
    <formula>Total_Protein__c /  (Number_of_Complete_Days__c -  Number_of_Incomplete_Food_Logs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Protein per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>