force-app/main/default/objects/Week__c/fields/Average_Steps__c.field-meta.xml
<CustomField>
    <fullName>Average_Steps__c</fullName>
    <formula>Total_Weekly_Steps__c /  Number_of_Complete_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>