force-app/main/default/objects/Week__c/fields/Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burned__c</fullName>
    <label>Calories Burned</label>
    <summarizedField>Day__c.Calories_Burned__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>