force-app/main/default/objects/Week__c/fields/Calories_Burned_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burned_Per_Day__c</fullName>
    <formula>IF(Number_of_Complete_Days__c - Number_of_Incomplete_Food_Logs__c = 0, 0, Calories_Burned__c / (Number_of_Complete_Days__c - Number_of_Incomplete_Food_Logs__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calories Burned Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>