force-app/main/default/objects/Week__c/fields/Carbs_per_KG_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Carbs_per_KG_per_Day__c</fullName>
    <formula>IF(Number_of_Complete_Days__c - Number_of_Incomplete_Food_Logs__c = 0, 0, Average_Carbs_per_Day__c  / IF(ISNULL(Weight__c), (175 / 2.205), (Weight__c / 2.205)))</formula>
    <label>Carbs per KG per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>