force-app/main/default/objects/Week__c/fields/External_Week_SFID__c.field-meta.xml
<CustomField>
    <fullName>External_Week_SFID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Week SFID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>