force-app/main/default/objects/Week__c/fields/Minutes_of_Exercise__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Exercise__c</fullName>
    <label>Minutes of Exercise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>