force-app/main/default/objects/Week__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipLabel>Week</relationshipLabel>
    <relationshipName>Week</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>