force-app/main/default/objects/Week__c/fields/Number_of_Complete_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Complete_Days__c</fullName>
    <label>Number of Complete Days</label>
    <summaryFilterItems>
        <field>Day__c.Completed_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>