force-app/main/default/objects/Week__c/fields/Number_of_Incomplete_Food_Logs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incomplete_Food_Logs__c</fullName>
    <label>Number of Incomplete Food Logs</label>
    <summaryFilterItems>
        <field>Day__c.Incomplete_Food_Log__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>