force-app/main/default/objects/Week__c/fields/Protein_per_KG_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Protein_per_KG_per_Day__c</fullName>
    <formula>IF(Number_of_Complete_Days__c - Number_of_Incomplete_Food_Logs__c = 0, 0, Average_Protein_per_Day__c / IF(ISBLANK(Weight__c), 79.36, Weight__c / 2.205))</formula>
    <label>Protein per KG per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>