force-app/main/default/objects/Week__c/fields/Total_Carbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Carbs__c</fullName>
    <label>Total Carbs</label>
    <summarizedField>Day__c.Net_Carbs__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>