force-app/main/default/objects/Week__c/fields/Total_Fat__c.field-meta.xml
<CustomField>
    <fullName>Total_Fat__c</fullName>
    <label>Total Fat</label>
    <summarizedField>Day__c.Fat__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>