force-app/main/default/objects/Week__c/fields/Total_Protein__c.field-meta.xml
<CustomField>
    <fullName>Total_Protein__c</fullName>
    <label>Total Protein</label>
    <summarizedField>Day__c.Protein__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>