force-app/main/default/objects/Week__c/fields/Total_Sleep_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Sleep_Time__c</fullName>
    <label>Total Sleep Time</label>
    <summarizedField>Day__c.Sleep_Time__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>