force-app/main/default/objects/Week__c/fields/Total_Weekly_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekly_Points__c</fullName>
    <label>Total Weekly Points</label>
    <summarizedField>Day__c.Total_Daily_Points__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>