force-app/main/default/objects/Week__c/fields/Total_Weekly_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekly_Steps__c</fullName>
    <label>Total Weekly Steps</label>
    <summarizedField>Day__c.Daily_Steps__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>