force-app/main/default/objects/Week__c/fields/Week_18_Character_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Week_18_Character_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week 18 Character Record ID</label>
    <type>Text</type>
</CustomField>