force-app/main/default/objects/Week__c/fields/Weekly_Alcoholic_Drinks_Drank__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Alcoholic_Drinks_Drank__c</fullName>
    <label>Weekly Alcoholic Drinks Drank</label>
    <summarizedField>Day__c.Daily_Alcoholic_Drinks_Drank__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>