force-app/main/default/objects/Week__c/fields/Weekly_Events_Points__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Events_Points__c</fullName>
    <label>Weekly Events Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>