force-app/main/default/objects/Week__c/fields/Weekly_Events_Points_Scored__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Events_Points_Scored__c</fullName>
    <label>Weekly Events Points Scored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>