force-app/main/default/objects/Week__c/fields/Weekly_Events_Score__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Events_Score__c</fullName>
    <formula>Weekly_Events_Points_Scored__c /  Weekly_Events_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Events Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>