force-app/main/default/objects/Week__c/fields/Weekly_Gallons_of_Water_Drank__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Gallons_of_Water_Drank__c</fullName>
    <label>Weekly Gallons of Water Drank</label>
    <summarizedField>Day__c.Daily_Gallons_of_Water_Drank__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>