force-app/main/default/objects/Week__c/fields/Weekly_Miles_Run__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Miles_Run__c</fullName>
    <label>Weekly Miles Run</label>
    <summarizedField>Exercise__c.Distance_Miles__c</summarizedField>
    <summaryFilterItems>
        <field>Exercise__c.Type_of_Activity__c</field>
        <operation>equals</operation>
        <value>Run</value>
    </summaryFilterItems>
    <summaryForeignKey>Exercise__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>