force-app/main/default/objects/Week__c/fields/Weekly_Minutes_of_TV__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Minutes_of_TV__c</fullName>
    <label>Weekly Minutes of TV</label>
    <summarizedField>Day__c.Minutes_of_TV__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>