force-app/main/default/objects/Week__c/fields/Weekly_Points_Scored__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Points_Scored__c</fullName>
    <label>Weekly Points Scored</label>
    <summarizedField>Day__c.Daily_Points_Scored__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>