force-app/main/default/objects/Week__c/fields/Weekly_Pushups__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Pushups__c</fullName>
    <label>Weekly Pushups</label>
    <summarizedField>Day__c.Daily_Pushups__c</summarizedField>
    <summaryForeignKey>Day__c.Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>