force-app/main/default/objects/Week__c/fields/Weekly_Score__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Score__c</fullName>
    <formula>Weekly_Points_Scored__c / Total_Weekly_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>