force-app/main/default/objects/Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Number_of_Complete_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>