force-app/main/default/objects/Week__c/listViews/X2023_Weeks.listView-meta.xml
<ListView>
    <fullName>X2023_Weeks</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Weekly_Score__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Number_of_Complete_Days__c</columns>
    <columns>Average_Protein_per_Day__c</columns>
    <columns>Average_Screen_Time__c</columns>
    <columns>Average_Steps__c</columns>
    <columns>Weekly_Pushups__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>2023 Weeks</label>
</ListView>